[package]
name = "stm32f3discovery"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]

[dependencies]
static-ref = "0.1.0"
stm32f30x = "*"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.either]
default-features = false
version = "1.1.0"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"
rev = "5295697669f5b48a900aa325b8ebb4d4e8d4b236"

[dependencies.nb]
git = "https://github.com/japaric/nb"